
[TestInstallViewSnapshots/running - 1]
cmd.install.header.success
⏳ Alpha (alpha) [modrinth]
⬇️ Beta (beta) [curseforge]
█████░░░░░
50% (512 KB / 1 MB)
✅ Gamma (gamma) [modrinth]
---

[TestInstallViewSnapshots/success - 1]
cmd.install.header.success
✅ Alpha (alpha) [modrinth]
✅ Beta (beta) [curseforge]

✅ cmd.install.summary.success
---

[TestInstallViewSnapshots/download_failed - 1]
cmd.install.header.success
✅ Alpha (alpha) [modrinth]
❌ Beta (beta) [curseforge] cmd.download.item.failed, Arg 1: {Count: 0, Data: &map[reason:network]}

‼️ cmd.install.summary.download_failed
cmd.install.summary.partial, Arg 1: {Count: 0, Data: &map[errorIcon:❌]}

cmd.install.summary.download_failed_hint
---

[TestInstallViewSnapshots/write_lock_failed - 1]
cmd.install.header.success
⏳ Alpha (alpha) [modrinth]
⬇️ Beta (beta) [curseforge]
█████░░░░░
50% (512 KB / 1 MB)
✅ Gamma (gamma) [modrinth]

‼️ cmd.install.summary.write_failed_abort, Arg 1: {Count: 0, Data: &map[file:modlist-lock.json]}
cmd.install.summary.write_failed_hint
---
